[package]
name = "kenny"
version = "0.1.0"
authors = ["Cameron Steffen <cam.steffen94@gmail.com>"]
edition = '2018'

[dependencies]
ahash = "0.4.4"
anyhow = "1.0.28"
clap = "2.33.0"
enum_dispatch = "0.3.1"
env_logger = "0.7.1"
itertools = "0.9.0"
linked-hash-map = "0.5.2"
linked_hash_set = "0.1.3"
log = "0.4.8"
once_cell = "1.4.0"
rand = "0.7.3"
tempfile = "3.1.0"
thiserror = "1.0.16"
#vec_map = "0.8.1"
vec_map = { git = "https://github.com/camsteffen/vec-map.git" }

[[bin]]
name = "kenny"
path = "src/bin/kenny/main.rs"
