[package]
name = "kenny"
version = "0.1.0"
authors = ["Cameron Steffen <cam.steffen94@gmail.com>"]
edition = '2021'

[dependencies]
ahash = "0.7.2"
anyhow = "1.0.38"
clap = "2.33.3"
env_logger = "0.8.3"
itertools = "0.10.0"
linked-hash-map = "0.5.4"
linked_hash_set = "0.1.4"
log = "0.4.14"
once_cell = "1.7.2"
rand = "0.8.3"
tempfile = "3.2.0"
thiserror = "1.0.24"

[[bin]]
name = "kenny"
path = "src/bin/kenny/main.rs"
